K8S/analyzerservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyzer-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analyzerservice
  template:
    metadata:
      labels:
        app: analyzerservice
    spec:
      containers:
        - name: analyzerservice
          image: gwadadasol/analyzerservice:latest
---
apiVersion: v1
kind: Service
metadata: 
  name: analyzer-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: analyzerservice
  ports:
    - name: analyzerservice
      protocol: TCP
      port: 80
      targetPort: 80
