K8S/transactionservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactionservice
  template:
    metadata:
      labels:
        app: transactionservice
    spec:
      containers:
        - name: transactionservice
          image: gwadadasol/transactionservice:latest
---
apiVersion: v1
kind: Service
metadata: 
  name: transaction-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: transactionservice
  ports:
    - name: transactionservice
      protocol: TCP
      port: 80
      targetPort: 80
