K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http: 
        paths: 
          - path: /api/v1/categories
            pathType: Prefix
            backend: 
              service: 
                name: category-clusterip-srv
                port:
                  number: 80
          - path: /api/v1/rules
            pathType: Prefix
            backend: 
              service: 
                name: category-clusterip-srv
                port:
                  number: 80
          - path: /api/v1/transactions
            pathType: Prefix
            backend: 
              service: 
                name: transaction-clusterip-srv
                port:
                  number: 80
          - path: /api/v1/analyzer
            pathType: Prefix
            backend: 
              service: 
                name: analyzer-clusterip-srv
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend: 
              service: 
                name: moneymanagerfrontend-clusterip-srv
                port:
                  number: 3000
